--- a/NVSSMessaging.csproj
+++ b/NVSSMessaging.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -15,6 +16,8 @@
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="VRDR.Messaging" Version="3.1.1" />
+    <!-- <ProjectReference Include="..\vrdr-dotnet\VRDR\DeathRecord.csproj" />
+    <ProjectReference Include="..\vrdr-dotnet\VRDR.Messaging\VRDRMessaging.csproj" /> -->
   </ItemGroup>
 
 </Project>
