--- a/messaging/messaging.csproj
+++ b/messaging/messaging.csproj
@@ -16,8 +16,8 @@
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="VRDR.Messaging" Version="3.1.1" />
-    <!-- <ProjectReference Include="..\vrdr-dotnet\VRDR\DeathRecord.csproj" />
-    <ProjectReference Include="..\vrdr-dotnet\VRDR.Messaging\VRDRMessaging.csproj" /> -->
+    <!-- <ProjectReference Include="..\..\vrdr-dotnet\VRDR\DeathRecord.csproj" />
+    <ProjectReference Include="..\..\vrdr-dotnet\VRDR.Messaging\VRDRMessaging.csproj" /> -->
   </ItemGroup>
 
 </Project>
