Add support for disabling the sending of ACK messages
By default the application will not send ACK messages, only when AppSettings.SendAckMessages is set to true in the appropriate AppSettings.json will the app write ACK messages to the OutgoingMessageItems table.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,10 @@
       "request": "launch",
       "preLaunchTask": "build",
       // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/bin/Debug/net5.0/NVSSMessaging.dll",
+      "program": "${workspaceFolder}/messaging/bin/Debug/net5.0/messaging.dll",
+      "requireExactSource": false,
       "args": [],
-      "cwd": "${workspaceFolder}",
+      "cwd": "${workspaceFolder}/messaging",
       "stopAtEntry": false,
       // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
       "serverReadyAction": {
