Fix branch name so test suite runs again

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,10 +1,10 @@
-name: Run Test Suite on PR or push to master
+name: Run Test Suite on PR or push to main
 
 on:
   push:
-    branches: [ master, addTests ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   test:
