--- a/messaging/messaging.csproj
+++ b/messaging/messaging.csproj
@@ -16,5 +16,7 @@
     <PackageReference Include="VRDR.Messaging" Version="3.2.1"/>
     <!-- <ProjectReference Include="..\..\vrdr-dotnet\VRDR\DeathRecord.csproj" />
     <ProjectReference Include="..\..\vrdr-dotnet\VRDR.Messaging\VRDRMessaging.csproj" /> -->
+    <!-- Uncomment the following line if you want to write logging to a file (also uncomment accompanying line in the Startup.cs) -->
+    <!-- <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0"/> -->
   </ItemGroup>
 </Project>
