--- a/messaging/messaging.csproj
+++ b/messaging/messaging.csproj
@@ -17,4 +17,7 @@
     <!-- Uncomment the following line if you want to write logging to a file (also uncomment accompanying line in the Startup.cs) -->
     <!-- <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0"/> -->
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\vrdr-dotnet\VRDR.Messaging\VRDRMessaging.csproj" />
+  </ItemGroup>
 </Project>
