--- a/messaging/messaging.csproj
+++ b/messaging/messaging.csproj
@@ -13,11 +13,11 @@
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22"/>
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
-    <PackageReference Include="VRDR.Messaging" Version="4.0.0-preview4" />
+    <PackageReference Include="VRDR.Messaging" Version="4.0.0-preview5" />
     <!-- Uncomment the following line if you want to write logging to a file (also uncomment accompanying line in the Startup.cs) -->
     <!-- <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0"/> -->
   </ItemGroup>
-  <ItemGroup>
+  <!-- <ItemGroup>
     <ProjectReference Include="..\..\vrdr-dotnet\VRDR.Messaging\VRDRMessaging.csproj" />
-  </ItemGroup>
+  </ItemGroup> -->
 </Project>
