--- a/messaging/messaging.csproj
+++ b/messaging/messaging.csproj
@@ -14,7 +14,10 @@
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
     <PackageReference Include="VRDR.Messaging" Version="4.0.0-preview4" />
-    <!-- Uncomment the following line if you want to write logging to a file (also uncomment accompanying line in the Startup.cs) -->
-    <!-- <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0"/> -->
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.1-dev-00337" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.0-dev-00265" />
+    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.1-dev-00038" />
+
   </ItemGroup>
 </Project>
