--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -2,12 +2,22 @@
   "AppSettings": {
     "AckAndIJEConversion": true
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.ApplicationInsights", "Serilog.Sinks.File"
+    ],
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "File", "Args": { "path": "Logs/log.txt", "rollingInterval": "Day"} }
+    ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Information",
+        "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Debug"
+      }
     }
   },
   "ConnectionStrings": {
