--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -21,6 +21,6 @@
     }
   },
   "ConnectionStrings": {
-    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;"
+    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong$Password;"
   }
 }
