--- a/messaging/appsettings.json.sample
+++ b/messaging/appsettings.json.sample
@@ -1,4 +1,9 @@
 {
+  "AppSettings": {
+    "AckAndIJEConversion": true,
+    "SAMS" : "https://apigw.cdc.gov/OSELS/NCHS/NVSSFHIRAPI",
+    "STEVE" : "https://ingress.devfhir.steve.naphsis.us"
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.ApplicationInsights", "Serilog.Sinks.File"
