--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -1,6 +1,9 @@
 {
   "AppSettings": {
-    "AckAndIJEConversion": true
+    "AckAndIJEConversion": true,
+    "SAMS" : "https://apigw.cdc.gov/OSELS/NCHS/NVSSFHIRAPI",
+    "STEVE" : "https://ingress.devfhir.steve.naphsis.us",
+    "PageCount" : 100
   },
   "Serilog": {
     "Using": [
@@ -21,6 +24,6 @@
     }
   },
   "ConnectionStrings": {
-    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;"
+    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong$Password;"
   }
 }
