--- a/messaging/messaging.csproj
+++ b/messaging/messaging.csproj
@@ -19,6 +19,9 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.0-dev-00265" />
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.1-dev-00038" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="NVSSAPI\fsh-generated\resources\CapabilityStatement-NVSS-API-CS.json"/>
+  </ItemGroup>
   <!-- <ItemGroup>
     <ProjectReference Include="..\..\vrdr-dotnet\VRDR.Messaging\VRDRMessaging.csproj" />
   </ItemGroup> -->
