--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -1,6 +1,8 @@
 name: Update swagger
 
 on:
+  push:
+    branches: [ swagger-page ]
   pull_request:
     branches: [ main ]
 
@@ -11,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-dotnet@v1
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet tool restore
     - name: Run Swagger Generation Scripts
       run:
         dotnet swagger tofile --output ../swagger/v1/swagger.json $(OutputPath)$(AssemblyName).dll v1
