--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Run Swagger Generation Scripts
       run:
         dotnet swagger tofile --output ./swagger/v1/swagger.yaml --yaml ./messaging/bin/Debug/net6.0/messaging.dll v1 WorkingDirectory=./messaging
+      run:
         dotnet swagger tofile --output ./swagger/v1/swagger.json ./messaging/bin/Debug/net6.0/messaging.dll v1 WorkingDirectory=./messaging
     - name: Set up git config
       run:
