--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install dependencies
       run: dotnet tool restore
     - name: Run Swagger Generation Scripts
-      working-directory: build
+      working-directory: ./
       run: |
         dotnet swagger tofile --output /swagger/v1/swagger.yaml --yaml /messaging/bin/Debug/net6.0/messaging.dll v1 WorkingDirectory=/messaging
         dotnet swagger tofile --output /swagger/v1/swagger.json /messaging/bin/Debug/net6.0/messaging.dll v1 WorkingDirectory=/messaging
