--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -16,7 +16,7 @@ jobs:
       run: dotnet tool restore
     - name: Run Swagger Generation Scripts
       working-directory: ./messaging
-      run: dotnet swagger tofile --output ../swagger/v1/swagger.json ./bin/Debug/net6.0/messaging.dll v1
+      run: dotnet swagger tofile --output ../swagger/v1/swagger.json /bin/Debug/net6.0/messaging.dll v1
     - name: Set up git config
       run: |
         git config user.name "GitHub Actions Swagger Docs Bot"
