--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -16,8 +16,9 @@ jobs:
         dotnet new tool-manifest --force
         dotnet tool install --version 6.4.0 Swashbuckle.AspNetCore.Cli
         ls
+        ls messaging/bin/Debug/net6.0/
     - name: Run Swagger Generation Scripts
-      run: dotnet swagger "tofile" --output "./swagger/v1/swagger.json" "/messaging/bin/Debug/net6.0/messaging.dll" v1
+      run: dotnet swagger "tofile" --output "./swagger/v1/swagger.json" "./messaging/bin/Debug/net6.0/messaging.dll" v1
     - name: Set up git config
       run: |
         git config user.name "GitHub Actions Swagger Docs Bot"
