--- a/.github/workflows/update-swagger.yaml
+++ b/.github/workflows/update-swagger.yaml
@@ -16,8 +16,9 @@ jobs:
         dotnet build
     - name: Run Swagger Doc Generation Scripts
       run: |
-        dotnet swagger "tofile" --output './swagger/v1/swagger.yaml' --yaml './messaging/bin/Debug/net6.0/messaging.dll' v1.1.0-preview5
-        dotnet swagger "tofile" --output './swagger/v1/swagger.json' './messaging/bin/Debug/net6.0/messaging.dll' v1.1.0-preview5
+        dotnet swagger "tofile" --output './swagger/v1/swagger.yaml' --yaml './messaging/bin/Debug/net6.0/messaging.dll' v1
+        dotnet swagger "tofile" --output './swagger/v1/swagger.json' './messaging/bin/Debug/net6.0/messaging.dll' v1
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "GitHub Actions Swagger Docs Bot"
+        commit_message: "GitHub Actions Bot - Update Swagger Documentation"
+        branch: gh-pages
