--- a/messaging/appsettings.json.sample
+++ b/messaging/appsettings.json.sample
@@ -3,7 +3,13 @@
     "AckAndIJEConversion": true,
     "SAMS" : "https://apigw.cdc.gov/OSELS/NCHS/NVSSFHIRAPI",
     "STEVE" : "https://ingress.devfhir.steve.naphsis.us",
-    "PageCount" : 100
+    "PageCount" : 100,
+    "ClientId" : "",
+    "ClientSecret" : "",
+    "AuthEndpoint" : "",
+    "TokenEndpoint" : "",
+    "UserInfo" : "",
+    "CallbackPath" : ""
   },
   "Serilog": {
     "Using": [
