--- a/messaging/appsettings.json.sample
+++ b/messaging/appsettings.json.sample
@@ -9,7 +9,8 @@
     "AuthEndpoint" : "",
     "TokenEndpoint" : "",
     "UserInfo" : "",
-    "CallbackPath" : ""
+    "CallbackPath" : "",
+    "RedirectUri" : ""
   },
   "Serilog": {
     "Using": [
