update vr, vrdr, and bfdr libraries

--- a/messaging/messaging.csproj
+++ b/messaging/messaging.csproj
@@ -13,9 +13,9 @@
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22"/>
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    <PackageReference Include="VRDR.Messaging" Version="4.1.10"/>
-    <PackageReference Include="BFDR.Messaging" Version="1.0.0-preview.2"/>
-    <PackageReference Include="VitalRecord.Messaging" Version="1.0.1-preview" />
+    <PackageReference Include="VRDR.Messaging" Version="4.2.2"/>
+    <PackageReference Include="BFDR.Messaging" Version="1.0.0-preview.6"/>
+    <PackageReference Include="VitalRecord.Messaging" Version="1.0.0-preview.3" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.1-dev-00337"/>
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.0-dev-00265"/>
