feat: add flag to enable bfdr messaging, use library header validation

--- a/messaging/appsettings.json.sample
+++ b/messaging/appsettings.json.sample
@@ -1,6 +1,7 @@
 {
   "AppSettings": {
     "AckAndIJEConversion": true,
+    "BFDREnabled" : false,
     "SAMS" : "https://apigw.cdc.gov/OSELS/NCHS/NVSSFHIRAPI",
     "STEVE" : "https://ingress.devfhir.steve.naphsis.us",
     "PageCount" : 100
