--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "AppSettings": {
     "AckAndIJEConversion": true,
+    "BFDREnabled" : true,
     "SAMS" : "https://apigw.cdc.gov/OSELS/NCHS/NVSSFHIRAPI",
     "STEVE" : "https://ingress.devfhir.steve.naphsis.us",
     "PageCount" : 100
