Add simple ruby tools for local development testing of the API

--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "AckAndIJEConversion": true,
+    "AckAndIJEConversion": false,
     "BFDREnabled" : true,
     "SAMS" : "https://apigw.cdc.gov/OSELS/NCHS/NVSSFHIRAPI",
     "STEVE" : "https://ingress.devfhir.steve.naphsis.us",
