--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -4,7 +4,8 @@
     "BFDREnabled" : true,
     "SAMS" : "https://apigw.cdc.gov/OSELS/NCHS/NVSSFHIRAPI",
     "STEVE" : "https://ingress.devfhir.steve.naphsis.us",
-    "PageCount" : 100
+    "PageCount" : 100,
+    "MaxPayloadSize" : 10000000
   },
   "Serilog": {
     "Using": [
