Add environment specification to appsettings and use it in status API

--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -13,7 +13,8 @@
     "SupportedVRDRIGVersions": [
       "VRDR_STU3_0",
       "VRDR_STU2_2"
-    ]
+    ],
+    "Environment": "Development"
   },
   "Serilog": {
     "Using": [
