--- a/status_ui/package.json
+++ b/status_ui/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
     "@mui/x-data-grid": "^7.19.0",
-    "moment": "^2.30.1",
+    "@mui/x-date-pickers": "^7.22.2",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
