Add "since" functionality to status API and UI

--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -6,7 +6,7 @@
     "STEVE" : "https://ingress.devfhir.steve.naphsis.us",
     "PageCount" : 100,
     "MaxPayloadSize" : 10000000,
-    "Environment": "Development"
+    "Environment": "Local Development"
   },
   "Serilog": {
     "Using": [
