--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
       sql.data:
         image: mcr.microsoft.com/mssql/server
         env:
-          SA_PASSWORD: yourStrong(!)Password1
+          SA_PASSWORD: yourStrong(!)Password
           ACCEPT_EULA: Y
         ports:
           - "1433:1433"
