--- a/messaging.tests/messaging.tests.csproj
+++ b/messaging.tests/messaging.tests.csproj
@@ -31,5 +31,6 @@
     <None Update="fixtures/json/CauseOfDeathCodingMsg.json" CopyToOutputDirectory="PreserveNewest" />
     <None Update="fixtures/json/ExtractionErrorMessage.json" CopyToOutputDirectory="PreserveNewest" />
     <None Update="fixtures/json/FetalDeathRecordSubmissionMessage.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="fixtures/json/DeathRecordSubmissionMessageV2_2.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>  
 </Project>
