--- a/status_api/Properties/launchSettings.json
+++ b/status_api/Properties/launchSettings.json
@@ -9,12 +9,12 @@
     }
   },
   "profiles": {
-    "status_api": {
+    "NVSSStatusAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7248;http://localhost:5038",
+      "applicationUrl": "https://localhost:5003;http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
