wip add package reference

--- a/status_api/status_api.csproj
+++ b/status_api/status_api.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="..\messaging\messaging.csproj" />
   </ItemGroup>
 
 </Project>
