implement StatusUI in status_api server

--- a/status_api/appsettings.Development.json
+++ b/status_api/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
+  "AppSettings": {
+    "Environment": "Local Development"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
