--- a/status_api/status_api.csproj
+++ b/status_api/status_api.csproj
@@ -23,4 +23,15 @@
     <ProjectReference Include="..\messaging\messaging.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="StatusUI/index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StatusUI/assets/index-uSXOUBRu.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="StatusUI/assets/index-DM7jbCo2.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
