add debugging statements

--- a/status_api/appsettings.Development.json
+++ b/status_api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Environment": "Local Development"
+    "Environment": "Development"
   },
   "Logging": {
     "LogLevel": {
