update appsettings to enable birth and fetal death separately, set up auto acks for fd

--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "AppSettings": {
-    "AckAndIJEConversion": false,
-    "BFDREnabled" : true,
+    "AckAndIJEConversion": true,
+    "BirthEnabled" : true,
+    "FetalDeathEnabled" : true,
     "SAMS" : "https://apigw.cdc.gov/OSELS/NCHS/NVSSFHIRAPI",
     "STEVE" : "https://ingress.devfhir.steve.naphsis.us",
     "PageCount" : 100,
@@ -27,6 +28,6 @@
     }
   },
   "ConnectionStrings": {
-    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong$Password;"
+    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password1;TrustServerCertificate=True;"
   }
 }
