--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -27,6 +27,6 @@
     }
   },
   "ConnectionStrings": {
-    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password1;TrustServerCertificate=True;"
+    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong$Password;TrustServerCertificate=True;"
   }
 }
