add trust server cert to sample appsettings

--- a/messaging/appsettings.json.sample
+++ b/messaging/appsettings.json.sample
@@ -28,6 +28,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;"
+    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
   }
 }
