--- a/status_api/appsettings.Development.json
+++ b/status_api/appsettings.Development.json
@@ -2,11 +2,8 @@
   "AppSettings": {
     "Environment": "Development"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information"
-    }
+  "Serilog": {
+    "MinimumLevel": "Debug"
   },
   "ConnectionStrings": {
     "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;"
