--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,5 +23,9 @@ jobs:
       uses: actions/setup-dotnet@v1
     - name: Install dependencies
       run: dotnet restore
+    - name: Run database migrations
+      run: |
+        dotnet ef database update --project messaging
+        dotnet ef database update --project status_api -- --environment Test
     - name: Test
       run: dotnet test
