--- a/messaging.tests/messaging.tests.csproj
+++ b/messaging.tests/messaging.tests.csproj
@@ -32,5 +32,7 @@
     <None Update="fixtures/json/ExtractionErrorMessage.json" CopyToOutputDirectory="PreserveNewest" />
     <None Update="fixtures/json/FetalDeathRecordSubmissionMessage.json" CopyToOutputDirectory="PreserveNewest" />
     <None Update="fixtures/json/DeathRecordSubmissionMessageV2_2.json" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>  
+    <None Update="fixtures/json/DeathRecordSubmissionBlankString.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="fixtures/json/DeathRecordSubmissionNullValue.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 </Project>
