--- a/status_api/status_api.csproj
+++ b/status_api/status_api.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!-- status_api.appsettings*.json files are included by default -->
     <Content Include="StatusUI/index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
