--- a/messaging.tests/messaging.tests.csproj
+++ b/messaging.tests/messaging.tests.csproj
@@ -40,5 +40,7 @@
     <None Update="fixtures/json/DeathRecordSubmissionMessageV2_2.json" CopyToOutputDirectory="PreserveNewest" />
     <None Update="fixtures/json/DeathRecordSubmissionBlankString.json" CopyToOutputDirectory="PreserveNewest" />
     <None Update="fixtures/json/DeathRecordSubmissionNullValue.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="fixtures/json/DeathRecordSubmissionUnescapedString.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="fixtures/json/DeathRecordSubmissionLeadingZeros.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 </Project>
