--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -13,7 +13,8 @@
     "SupportedVRDRIGVersions": [
       "VRDR_STU3_0",
       "VRDR_STU2_2"
-    ]
+    ],
+    "Environment": "Development"
   },
   "Serilog": {
     "Using": [
@@ -34,6 +35,6 @@
     }
   },
   "ConnectionStrings": {
-    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong$Password;TrustServerCertificate=True;"
+    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
   }
 }
