update pw to meet new requirements

--- a/messaging/appsettings.Development.json
+++ b/messaging/appsettings.Development.json
@@ -35,6 +35,6 @@
     }
   },
   "ConnectionStrings": {
-    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
+    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password1;TrustServerCertificate=True;"
   }
 }
