--- a/status_api/status_api.appsettings.Development.json
+++ b/status_api/status_api.appsettings.Development.json
@@ -20,6 +20,6 @@
     }
   },
   "ConnectionStrings": {
-    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;"
+    "NVSSMessagingDatabase": "Server=localhost;Database=nvssmessaging;User=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
   }
 }
